codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  3\"),\n&normalized_project_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  1 need input   1 working   0 ready
  ────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  3                                     │ Task details
  › ● Build the dashboard  current  Needs input       │
    ● Repair authentication  Working                  │ Build the dashboard
    ✓ Review yesterday's changes  Finished            │ ● Needs input
                                                      │
                                                      │ Agent: Inspect keyboard shortcuts
                                                      │ Open task to review.
                                                      │ Waiting for approval.
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │
                                                      │ Prompt
                                                      │ Build the dashboard
                                                      │
  New task
╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ › First line                                                                                 │
│   Second line                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯
   enter create task    ctrl+j newline    esc tasks
