codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_empty_narrow.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 2041
expression: "render_bottom_popup(&app.chat_widget, 48)"
---
  Agent command center
  0 need input   0 working   0 ready
  ────────────────────────────────────────────













  New task
╭──────────────────────────────────────────────╮
│ › Describe a new task                        │
╰──────────────────────────────────────────────╯
  ↑↓ navigate ctrl+o resume → open
  ctrl+n new task ctrl+f search ctrl+s group
  ctrl+r rename ctrl+x stop ctrl+w hide
  ctrl+e archive del delete esc back
